--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -38,9 +38,9 @@
             <div class="header-main">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-2">
+                        <!-- <div class="col-md-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                                <a href="index.html"></a>
                             </div>
                         </div>
                         <div class="col-md-10">
@@ -56,7 +56,32 @@
                                         <li><a href="#">Blog</a></li>
                                         <li><a href="#">Contatact</a></li>
                                     </ul>
-                            </nav>
+                            </nav> 
+                        </div> -->
+                        <div class="col-md-12">
+                            <nav class="navbar navbar-expand-lg main-menu">
+                                <a class="navbar-brand" href="#">
+                                    <div class="logo">
+                                        <img src="assets/img/logo.png" alt="logo">
+                                    </div>
+                                </a>
+                                <button class="navbar-toggler" type="button" 
+                                data-toggle="collapse" data-target="#navbarNav">
+                                  <i class="fa fa-bars" aria-hidden="true"></i>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarNav">
+                                  <ul class="navbar-nav">
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Services</a></li>
+                                    <li><a href="#">Skill</a></li>
+                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="#">Team</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Contatact</a></li>
+                                  </ul>
+                                </div>
+                              </nav>
                         </div>
                     </div>
             </div>
@@ -122,7 +147,7 @@
                         </div>
                     </div>
                     <!-- About Main Content -->
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-sm-12">
                         <div class="about-right">
                             <h3>I'm a freelance web developer with 3+ years of experience</h3>
                             <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Nemo animi soluta ratione quisquam, dicta ab cupiditate iure eaque? Repellendus voluptatum, magni impedit eaque delectus, beatae maxime temporibus maiores quibusdam quasi.Rem magnam ad perferendis iusto sint tempora ea voluptatibus iure, animi excepturi modi aut possimus in hic molestias repellendus illo ullam odit quia velit. Qui expedita sit quo, maxime molestiae.</p>
@@ -172,42 +197,42 @@
             <!-- Section content -->
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="services-box text-center">
                             <i class="fa fa-desktop"></i>
                             <h4>Web Design</h4>
                             <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="services-box text-center">
                             <i class="fa fa-laptop"></i>
                             <h4>Web Development</h4>
                             <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="services-box text-center">
                             <i class="fa fa-code"></i>
                             <h4>App Development</h4>
                             <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="services-box text-center">
                             <i class="fa fa-comments"></i>
                             <h4>Live Support</h4>
                             <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="services-box text-center">
                             <i class="fa fa-life-ring"></i>
                             <h4>Frendly Support</h4>
                             <p>This is Photoshop's version of lorem ipsum, Proin gravida nibh vel vlit auctor aliquet.Aenean sollicitudin, lorem quis</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-lg-4 col-md-6">
                         <div class="services-box text-center">
                             <i class="fa fa-tachometer"></i>
                             <h4>Super First Web</h4>
@@ -294,28 +319,28 @@
 <div class="counter section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="counter-box">
                     <p><i class="fa fa-american-sign-language-interpreting"></i></p>
                     <span class="counter-number">128</span>
                     <p class="counter-name">happy client</p>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="counter-box">
                     <p><i class="fa fa-american-sign-language-interpreting"></i></p>
                     <span class="counter-number">400</span>
                     <p class="counter-name">Work Complete</p>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="counter-box">
                     <p><i class="fa fa-american-sign-language-interpreting"></i></p>
                     <span class="counter-number">560</span>
                     <p class="counter-name">total hours</p>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="counter-box">
                     <p><i class="fa fa-american-sign-language-interpreting"></i></p>
                     <span class="counter-number">600</span>
@@ -534,7 +559,7 @@
             <!-- Section content -->
             <div class="container content-top-space">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="blog-item">
                             <div class="blog-img">
                                 <img src="assets/img/blog/blog-1.jpg" alt="">
@@ -547,7 +572,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="blog-item">
                             <div class="blog-img">
                                 <img src="assets/img/blog/blog-1.jpg" alt="">
@@ -560,7 +585,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="blog-item">
                             <div class="blog-img">
                                 <img src="assets/img/blog/blog-1.jpg" alt="">
@@ -626,7 +651,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-12">
                     <div class="footer-icon">
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
