Responsive Blog section

--- a/PSD to HTML  Part - 1/index.html
+++ b/PSD to HTML  Part - 1/index.html
@@ -651,7 +651,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-6 col-sm-6 ">
                     <div class="footer-icon">
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -663,7 +663,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 text-right">
+                <div class="col-lg-6 col-sm-6 text-right">
                     <p>&copy; Copyright By Mehedi Amin (2020)</p>
                 </div>
             </div>
